# ROAR

Lift_simulation/: README.md
Lift_simulation/firmware/: CMakeLists.txt
Lift_simulation/firmware/signal_simulator/: CMakeLists.txt  signalSimulator.cpp  signalSimulator.ino
Lift_simulation/firmware/signal_simulator/signalSimulator/: signalSimulator.ino
Lift_simulation/roar_lift_sim/config/: rviz.rviz
Lift_simulation/roar_lift_sim/launch/: sim_lift.launch
Lift_simulation/roar_lift_sim/urdf/: lift.urdf
Lift_simulation/simulate_lift/: setup.py
Lift_simulation/simulate_lift/src/simulate_lift/: simulate_lift.py
ROAR_simulation/: README.md
ROAR_simulation/controller_bridge/: CMakeLists.txt  package.xml
ROAR_simulation/roar_bringup/: CMakeLists.txt  package.xml  setup.py
ROAR_simulation/roar_bringup/src/roar_bringup/: config.json
ROAR_simulation/roar_sim/: CMakeLists.txt  package.xml
ROAR_simulation/roar_sim/config/: rviz.rviz
ROAR_simulation/roar_sim/launch/: roar_sim.launch
Task1/: README.md
Task1/ROAR_msgs/: CMakeLists.txt  package.xml
Task1/ROAR_msgs/msg/: Event.msg
Task1/controller_bridge/: CMakeLists.txt  setup.py
Task1/controller_bridge/src/controller_bridge/: controller.py  controller_bridge.py
Task1/frames/: frames.gv  frames.pdf.ns  frames.pdf.prefix  frames.pdf.working
Task1/frames/stageFrames/: frames.gv  frames.pdf.ns  frames.pdf.working
Task1/launch/: husky.launch  multi.launch  one_robot.launch  roar.launch  robots.launch  turtlebot_in_stage.launch
Task1/launch/old not working/: amcl.launch.xml  multi.launch  one_robot.launch  robots.launch
Task1/map/: map.pgm
Task1/roar_bringup/: CMakeLists.txt  package.xml
Task1/roar_bringup/src/roar_bringup/: bringup.py  config.json  roar_bringup.py  robot.py
Task1/roar_sim/launch/: roar_sim.launch
Task1/urdf/: robot.urdf
Task2/: README.md
Task2/ROAR_msgs/: CMakeLists.txt  package.xml
Task2/config/: rviz.rviz
Task2/firmware/: package.xml
Task2/firmware/signal_simulator/: CMakeLists.txt
Task2/launch/: display.launch
Task2/lift_msgs/: CMakeLists.txt  package.xml
Task2/lift_msgs/action/: LiftMovement.action
Task2/lift_msgs/srv/: SimulateLift.srv
Task2/roar_lift_sim/: CMakeLists.txt  package.xml
Task2/roar_lift_sim/launch/: sim_lift.launch
Task2/simulate_lift/: CMakeLists.txt  package.xml
Task2/simulate_lift/src/simulate_lift/: simulate_lift.py
Task2/urdf/: robot.urdf
