<?xml version="1.0"?>
<package>
  <name>roar_lift_sim</name>
  <version>0.0.0</version>
  <description>The roar_lift_sim package</description>



  <license>unlicensed</license>

  <author email="ashfaq.farooqui@gmail.com">Ashfaq Farooqui</author>
  <maintainer email="ashfaq.farooqui@gmail.com">Ashfaq Farooqui</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roar_msg</run_depend>


  <export>
  </export>
</package>
