<?xml version="1.0"?>
<package>
  <name>simulate_lift</name>
  <version>0.0.0</version>
  <description>The bringup</description>



  <license></license>

  <author email="ashfaq.farooqui@gmail.com">Ashfaq Farooqui</author>
  <maintainer email="none@none.com">noone</maintainer>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>